[package]
name = "tui-qalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.49.2"
closure = "0.3.0"
crossterm = "0.27.0"
cursive = { git = "https://github.com/gyscos/cursive"}
debounce = "0.2.2"
dirs = "5.0.1"
itertools = "0.12.1"
memoize = {version="0.4.2",features=["full"]}
ncurses = "5.101.0"
owning_ref = "0.4.1"
regex = "1.10.4"
unicode-width = "0.1.11"
